notes to responsive design, responsiveness acheived

--- a/navigation-menu/other-embeds.html
+++ b/navigation-menu/other-embeds.html
@@ -15,7 +15,7 @@
     <header align="right">
         <img src="../images/firefox-nightly-logo2019.svg" width="45" alt="Firefox_Nightly_logo" title = "firefox nightly logo"/>
     </header>
-    <h1>Other Embedding Technologies</h1>
+    <h1>Other Embedding elements</h1>
     <div class="navigation-menu">
         <p>
             <ul>
@@ -26,8 +26,7 @@
         </p>
     </div>
 </br>
-
-    <div class="container">
+    <div class="notes-container">
         <p>Different types of embedding elements include :
             <ul>
                 <li><code>&lt;iframe&gt;</code> - Embeds an external web page</li> 
@@ -36,78 +35,74 @@
             </ul>
         </p>
         <p>
-        <ul>
-            <li>However, the most common and popular are : <code>&lt;iframe&gt;</code>, <code>&lt;canvas&gt;</code>, <code>&lt;video&gt;</code> and so on.</li> 
-            <li><code>&lt;embed&gt;</code> & <code>&lt;object&gt;</code> are <strong>deprecated</strong> 
-                due to their lack of support in modern browsers considering the security and accessibility risks from external resources.</li>
-        </ul>
+            <ul>
+                <li>However, the most common and popular are : <code>&lt;iframe&gt;</code>, <code>&lt;canvas&gt;</code>, <code>&lt;video&gt;</code> and so on.</li> 
+                <li><code>&lt;embed&gt;</code> & <code>&lt;object&gt;</code> are <strong>deprecated</strong> 
+                    due to their lack of support in modern browsers considering the security and accessibility risks from external resources.</li>
+            </ul>
         </p>
     </div>
 </br>
     <div class="grid-container">
         <div class="media-column">
-        <!--video-->
-        <iframe width="560" height="450" 
-            src="https://www.youtube-nocookie.com/embed/ysEN5RaKOlA?si=Q37xYjNgW3dHjptD" 
-            title="YouTube video player" frameborder="10" allow="accelerometer; 
-            autoplay; clipboard-write; encrypted-media; 
-            gyroscope; picture-in-picture; web-share" 
-            allowfullscreen>
-        </iframe>
-<hr>
-        <!--map-->
-        <iframe width="560" height="450" 
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7865.152931605858!2d22.0053239!3d60.4734703!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x468b88ccd92014f7%3A0xe5f953b8c441c093!2sMoomin%20World!5e0!3m2!1sen!2sfi!4v1693306044058!5m2!1sen!2sfi" 
-            title="Google Map" frameborder="10" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
-            allowfullscreen>
-        </iframe>
+            <!--video-->
+            <iframe width="560" height="450" 
+                src="https://www.youtube-nocookie.com/embed/ysEN5RaKOlA?si=Q37xYjNgW3dHjptD" 
+                title="YouTube video player" allow="accelerometer
+                clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                frameborder="10" allowfullscreen>
+            </iframe>
+            <p>
+                Here, we embedded a Youtube video <i>"Learning Web Development as an Absolute Beginner" by Coder Coder 
+                using <code>&lt;iframe&gt;</code> element. Topics discussed are : 
+                <ul>
+                    <li>Roles of web developers, importance of code editors, filetypes for frontend.</li>
+                    <li>Tools for front-end web development such as package managers, build tools, and version control.</li>
+                    <li>Front-end skills like Sass, responsive design, and JavaScript frameworks like React.</li>
+                    <li>3 Main components of backend development such as server, server-side programming languages, and databases.</li>
+                </ul>
+            </p>
+            <em class="credits">Video summary built using <a href="https://www.summarize.tech/">summarize.tech</a>. Possible inaccuracies.</em>
         </div>
-
-        <div class="text-column">
-        <p>
-            Here, we embedded a video, a map and website using the <code>&lt;iframe&gt;</code> element.
-            <ul>
-            This embedded Youtube video is about <i>"Learning Web Development as an Absolute Beginner" by Coder Coder</i>.
-            They explain the basics of web development in a very simple way. The topics discussed are : 
-                <li>Roles of web developers, the importance of code editors, types of files that make up website's front end.</li>
-                <li>Tools for front-end web development such as package managers, build tools, and version control.</li>
-                <li>Front-end skills like Sass, responsive design, and JavaScript frameworks like React.</li>
-                <li>3 Main components of backend development such as server, server-side programming languages, and databases.</li>
-            </ul>
-            <em>Video summary built using <a href="https://www.summarize.tech/">summarize.tech</a>. Possible inaccuracies.</em>
-        </p>
-<hr>   
-        <pre>
-Here, we have a Google map location of Moomin World, a Moomin themed amusement park.
-
-You can check about Moomin and other characters from the embedded website by <b>Moomin Characters Oy.</b> 
-Click on "Hamburger Menu" (three horizontal lines) on left to check about other Moomin characters.
-
-OR You could just <a href="https://www.moomin.com/en/characters/moomintroll">visit their webpage</a>, which is much more comfortable! ;D
-<iframe width="75%" height="300"
-    src="https://www.moomin.com/en/characters/moomintroll/"
-    title="Moomin World" frameborder="10">
-</iframe>
-        </pre>
+        <hr>
+        <div class="media-column">
+            <!--map and webpage-->
+            <iframe width="560" height="450" 
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7865.152931605858!2d22.0053239!3d60.4734703!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x468b88ccd92014f7%3A0xe5f953b8c441c093!2sMoomin%20World!5e0!3m2!1sen!2sfi!4v1693306044058!5m2!1sen!2sfi" 
+                title="Google Map" frameborder="10" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+                allowfullscreen>
+            </iframe>
+            <iframe width="560" height="450" 
+                src="https://www.moomin.com/en/characters/moomintroll/"
+                title="Moomin World" frameborder="10">
+            </iframe>
+            <p>
+                Here, we have a Google map location of Moomin World, a Moomin themed amusement park and the official Moomin website, using <code>&lt;iframe&gt;</code> element.
+                <ul>
+                    <li>You can check about Moomin and other characters from the embedded website by <b>Moomin Characters Oy.</b></li> 
+                    <li>Click on "Hamburger Menu" (three horizontal lines) on left to check about other Moomin characters.</li>               
+                    <li>OR You could just <a href="https://www.moomin.com/en/characters/moomintroll">visit their webpage</a>, which is much more comfortable! ;D</li>
+                </ul>
+            </p>
         </div>
     </div>
     <hr>
-    <h2>Takeaways from Embedding </h2>
-        <div class="footer">
-        <p>
-            <cite>Source : <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Multimedia_and_embedding/Other_embedding_technologies#security_concerns">MDN Web Docs</a></cite>   
-            <ul>
-                <li>Embed only when and where it is needed, to prevent possible attacks <em>since it is not secure</em>.</li>
-                <li>One of the possible attacks is <a href="https://developer.mozilla.org/en-US/docs/Glossary/Clickjacking">Clickjacking</a></li>
-                <li>To prevent Clickjacking attacks, do the following :
-                    <li>Always use <code>sandbox</code> attribute.</li>
-                    <li>Use HTTPS-enabled hosting with neccessary certification using <a href="https://letsencrypt.org/">Let's Encrypt</a>.</li>
-                    <li>Secure all <code>&lt;iframe&gt;</code> elements by configuring server in JS/HTTP/XML to send appropriate <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/X-Frame-Options"><code>X-Frame-Options</code></a> header.</li> 
-                </li>
-                <li><b>PS : These are mostly notes for myself :) </b></li>
-            </ul>
-        </p>
-        <a href="#" class="back-to-top">Back To Top</a>
-        </div>
+    <h2>Takeaways from Embedded Design</h2>
+    <div class="footer">
+    <p>
+        <cite class="credits">Source : <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Multimedia_and_embedding/Other_embedding_technologies#security_concerns">MDN Web Docs</a></cite>   
+        <ul>
+            <li>Embed only when and where it is needed, to prevent possible attacks <em>since it is not secure</em>.</li>
+            <li>One of the possible attacks is <a href="https://developer.mozilla.org/en-US/docs/Glossary/Clickjacking">Clickjacking</a></li>
+            <li>To prevent Clickjacking attacks, do the following :
+                <li>Always use <code>sandbox</code> attribute.</li>
+                <li>Use HTTPS-enabled hosting with neccessary certification using <a href="https://letsencrypt.org/">Let's Encrypt</a>.</li>
+                <li>Secure all <code>&lt;iframe&gt;</code> elements by configuring server in JS/HTTP/XML to send appropriate <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/X-Frame-Options"><code>X-Frame-Options</code></a> header.</li> 
+            </li>
+            <li><b>PS : These are mostly notes for myself :) </b></li>
+        </ul>
+    </p>
+    <a href="#" class="back-to-top">Back To Top</a>
+    </div>
 </body>
 </html>
