updated colors, nav menu, credits, signature

--- a/navigation-menu/other-embeds.html
+++ b/navigation-menu/other-embeds.html
@@ -16,16 +16,14 @@
         <img src="../images/firefox-nightly-logo2019.svg" width="45" alt="Firefox_Nightly_logo" title = "firefox nightly logo"/>
     </header>
     <h1>Other Embedding elements</h1>
-    <div class="navigation-menu">
-        <p>
-            <ul>
-                <li><a href="../index.html">Back To Basics</a></li>
-                <li><a href="vector-graphics.html">Vector Graphics</a></li>
-                <li><a href="responsive-images.html">Responsive Images</a></li>
-            </ul>
-        </p>
-    </div>
-</br>
+    <nav>
+        <ul>
+            <li><a href="../index.html">Back To Basics</a></li>
+            <li><a href="vector-graphics.html">Vector Graphics</a></li>
+            <li><a href="responsive-images.html">Responsive Images</a></li>
+            <li><a href="credits.html">Credits</a></li>
+        </ul>
+    </nav>
     <div class="notes-container">
         <p>Different types of embedding elements include :
             <ul>
