--- a/navigation-menu/responsive-images.html
+++ b/navigation-menu/responsive-images.html
@@ -16,16 +16,14 @@
         <img src="../images/firefox-nightly-logo2019.svg" width="45" alt="Firefox_Nightly_logo" title = "firefox nightly logo"/>
     </header>
     <h1>Responsive Images</h1>
-    <div class="navigation-menu">
-        <p>
-            <ul>
-                <li><a href="../index.html">Back To Basics</a></li>
-                <li><a href="vector-graphics.html">Vector Graphics</a></li>
-                <li><a href="other-embeds.html">Other Embedding elements</a></li>
-            </ul>
-        </p>
-    </div>
-    </br>
+    <nav>
+        <ul>
+            <li><a href="../index.html">Back To Basics</a></li>
+            <li><a href="vector-graphics.html">Vector Graphics</a></li>
+            <li><a href="other-embeds.html">Other Embedding elements</a></li>
+            <li><a href="credits.html">Credits</a></li>
+        </ul>
+    </nav>
     <div class="notes-container">
         <p>Issues which provided the neccessity for Responsive Design or in our case, Responsive Images :
             <ul>
