--- a/navigation-menu/vector-graphics.html
+++ b/navigation-menu/vector-graphics.html
@@ -16,16 +16,15 @@
         <img src="../images/firefox-nightly-logo2019.svg" width="45" alt="Firefox_Nightly_logo" title = "firefox nightly logo"/>
     </header>
     <h1>Vector Graphics</h1>
-    <div class="navigation-menu">
-        <p>
-            <ul>
-                <li><a href="../index.html">Back To Basics</a></li>
-                <li><a href="responsive-images.html">Responsive Images</a></li>
-                <li><a href="other-embeds.html">Other Embedding elements</a></li>
-            </ul>
-        </p>
-    </div>
-</br>
+    <nav>
+         <ul>
+            <li><a href="../index.html">Back To Basics</a></li>
+            <li><a href="responsive-images.html">Responsive Images</a></li>
+            <li><a href="other-embeds.html">Other Embedding elements</a></li>
+            <li><a href="credits.html">Credits</a></li>
+        </ul>
+    </nav>
+
     <div class="notes-container">
         <p>Vector Graphics are used to create images and illustrations. Images can be rendered in 2 ways :
             <ul>
