--- a/navigation-menu/credits.html
+++ b/navigation-menu/credits.html
@@ -94,16 +94,22 @@
         <h1>Credits</h1>
         <ul>
             <li>
-                Learning content from <a href="https://mdn.github.io/learning-area/html/multimedia-and-embedding/">MDN GitHub</a>
-                <a href="https://commons.wikimedia.org/wiki/File:Firefox_Nightly_logo,_2019.svg">Mozilla Corporation</a>
+                Learning content from <a href="https://mdn.github.io/learning-area/html/multimedia-and-embedding/">MDN GitHub.</a>
             </li>
-            <li> Firefox Nightly Logo,<cite class="credits">Credits : <a href="https://commons.wikimedia.org/wiki/File:Firefox_Nightly_logo,_2019.svg">Mozilla Corporation</a>, <a href="https://www.mozilla.org/en-US/MPL/2.0/">MPL 2</a>, via Wikimedia Commons</cite>
-            </li>
-            <li>Images and Videos from FreePik, Pexels, YouTube and embedded websites are accredited to their respective Authors/Organisations at the site of their use.</li>
             <li>
-                Designed and Developed by Prakirth Govardhanam
+                Firefox Nightly Logo,<cite class="credits">Credits : <a href="https://commons.wikimedia.org/wiki/File:Firefox_Nightly_logo,_2019.svg">Mozilla Corporation</a>, <a href="https://www.mozilla.org/en-US/MPL/2.0/">MPL 2</a>, via Wikimedia Commons</cite>
             </li>
-
+            <li>
+                Images and Videos from FreePik, Pexels, YouTube and embedded websites are accredited to their respective Authors/Organisations at the site of their use.</li>
+            <li>
+                Mentored by GPT3.5, <a href="https://chat.openai.com/auth/login">ChatGPT</a>
+            </li>
+            <li>
+                <a href="(https://favicon.io/favicon-generator/">Favicon Generator</a>, Created by John Sorrentino
+            </li><br><hr>
+            <li>
+                <em>~~Designed and Developed by Prakirth Govardhanam~~</em>
+            </li>
         </ul>
     </div>
     
