higihlight key text

--- a/navigation-menu/credits.html
+++ b/navigation-menu/credits.html
@@ -94,21 +94,21 @@
         <h1>Credits</h1>
         <ul>
             <li>
-                Learning content from <a href="https://mdn.github.io/learning-area/html/multimedia-and-embedding/">MDN GitHub.</a>
+                <b>Learning content</b> from <a href="https://mdn.github.io/learning-area/html/multimedia-and-embedding/">MDN GitHub.</a>
             </li>
             <li>
-                Firefox Nightly Logo,<cite class="credits">Credits : <a href="https://commons.wikimedia.org/wiki/File:Firefox_Nightly_logo,_2019.svg">Mozilla Corporation</a>, <a href="https://www.mozilla.org/en-US/MPL/2.0/">MPL 2</a>, via Wikimedia Commons</cite>
+            <b>Firefox Nightly Logo</b>,<cite class="credits"> from <a href="https://commons.wikimedia.org/wiki/File:Firefox_Nightly_logo,_2019.svg">Mozilla Corporation</a>, <a href="https://www.mozilla.org/en-US/MPL/2.0/">MPL 2</a>, via Wikimedia Commons</cite>
             </li>
             <li>
-                Images and Videos from FreePik, Pexels, YouTube and embedded websites are accredited to their respective Authors/Organisations at the site of their use.</li>
+            <b>Images and Videos</b> from FreePik, Pexels, YouTube and embedded websites are accredited to their respective Authors/Organisations at the site of their use.</li>
             <li>
-                Mentored by GPT3.5, <a href="https://chat.openai.com/auth/login">ChatGPT</a>
+            <b>Mentored by</b> GPT3.5, <a href="https://chat.openai.com/auth/login">ChatGPT</a>
             </li>
             <li>
                 <a href="(https://favicon.io/favicon-generator/">Favicon Generator</a>, Created by John Sorrentino
             </li><br><hr>
             <li>
-                <em>~~Designed and Developed by Prakirth Govardhanam~~</em>
+                <em>~~<b>Designed and Developed by</b> Prakirth Govardhanam~~</em>
             </li>
         </ul>
     </div>
